intersection datasets obtained

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ spider/database
 generate_datasets/preprocessed_data.json
 src/__pycache__
 mohamed-spider-training.jsonl
+spider_create_context_train.json
+sql_create_context_v4.json
+spider_create_context_val.json
